# financebench-v2

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  MODEL_GUIDE.md  README.md  RESEARCH.md  REVIEW_REPORT.md  REVIEW_REPORT_V2.md  generate_baseline.py  generate_dashboard_data.py  last_run.json  pyproject.toml  run.sh  run_simulation.py
baselines/: 2026-02-18_neutral_f9dff68e.json  2026-02-18_neutral_f9dff68e_report.md  registry.json
docs/: app.js  index.html
docs/data/: phases.json  results.json
financebench/: __init__.py  __main__.py  checkpoint.py  cli.py  consequences.py  embedder.py  events.py  model.py  model_factory.py  multi_model_sim.py  orchestrator.py  outcomes.py  reflection.py  report_generator.py  reporting.py  scene_builder.py  scoring.py  sim_output.py  simulation.py  storage.py  transcript.py
financebench/configs/: characters.py  company.py  decision_points.py  decision_types.py  decisions_early.py  (+5 more)
scripts/: test_models.py
tests/: test_checkpoint.py  test_decision_scoring.py  test_events_and_builder.py  test_model.py  test_multi_model.py  test_orchestrator.py  test_phase_beats.py  test_phases.py  test_reflection.py  test_reporting.py  test_smoke.py  test_storage.py  test_storage_outcomes.py
transcripts/: phase_01_q4_close_&_budget_season.txt  phase_02_cross-functional_budget_review.txt  phase_03_karen_takes_credit.txt  phase_04_skip-level_with_the_cfo.txt  phase_05_the_churn_crisis.txt  phase_06_board_presentation.txt  phase_07_succession_announcement.txt  phase_08_the_external_candidate.txt  phase_09_the_decision.txt
